feat: initial implementation of spring-xpose-boot-starter - @ExposeEntity annotation with Operation, RelationMode, AuthType enums - Annotation processor generates per entity at compile time:   - XRepository (JpaRepository interface)   - XController (REST @RestController with selected CRUD ops)   - XSecurityConfigurer (SecurityFilterChain scoped to entity path)   - XGraphQlWiring + SDL schema (when mode=GRAPHQL) - SerializationContext ThreadLocal for relation-aware JSON serialization - SpringXposeAutoConfiguration + SpringXposeProperties - Sample app: Product + Category entities, DataLoader, H2 in-memory DB - 19 processor unit tests (compile-testing + JUnit 5) - 10 sample integration tests (@SpringBootTest + MockMvc + H2) - GitHub Actions: ci.yml, release.yml, sample-build.yml - BUILD SUCCESSFUL: all 29 tasks, 29/29 tests green